@@ -1,5 +1,11 @@
 * changes v6.2.0 -> v6.x.x
 
+##
+## Technical
+##
+
+- Dependencies: Make unrar dependencies optional and disable hash-mode 23800 if dependency is disabled
+
 * changes v6.1.1 -> v6.2.0
 
 ##
